fixed issue w. overlapping UI in mobile, adjusted widths

--- a/src/css/modules/_navigation.scss
+++ b/src/css/modules/_navigation.scss
@@ -96,7 +96,8 @@
 	.nav-toggle {
 		display: flex;
 		justify-content: space-between;
-		width: calc(100% - var(--four-units));
+		width: 66%;
+		height: calc(9 * var(--unit));
 		left: 0;
 		transform: translate(0, 0);
 
@@ -123,7 +124,7 @@
 		justify-content: center;
 		align-items: center;
 
-		z-index: 8;
+		z-index: 9;
 		width: 100%;
 		height: 100vh;
 		margin: 0 0 0 0;
